update success page in auth module and add-property in user module

--- a/web/src/app/auth/success/success.page.html
+++ b/web/src/app/auth/success/success.page.html
@@ -17,6 +17,10 @@
       <ion-text class="message">
         "Congratulations! Your registration was successful."
       </ion-text>
+
+      <ion-label class="btn">
+        <a routerLink="/auth/login" class="link-btn">go to login</a>
+      </ion-label>
     </div>
   </div>
 </ion-content>
