--- a/web/src/app/auth/success/success.page.scss
+++ b/web/src/app/auth/success/success.page.scss
@@ -62,4 +62,21 @@ ion-content.fullscreen {
         justify-content: center;
         top: 12vh;
     }
+
+    .btn {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        top: 20vh;
+        /* border: 1px solid #ccc; */
+        width: 25%;
+        margin: auto;
+        border-radius: 2vh;
+        background: #F8A042;
+
+        .link-btn {
+            color: #000000 !important;
+            text-decoration: none;
+        }
+    }
   }
