--- a/web/src/app/user/add-property/add-property.page.scss
+++ b/web/src/app/user/add-property/add-property.page.scss
@@ -70,3 +70,53 @@
     --ion-item-border-width: 0px;
   }
   
+
+  .property-list {
+    width: 80%;
+    margin: auto;
+    border: 1px solid #ccc;
+    border-radius: 3vh;
+}
+
+
+.device-btn {
+  display: flex;
+  position: relative;
+  top: 2rem;
+  margin: auto;
+}
+
+.block {
+  width: 100%;
+  height: 350px;
+
+  .block-title {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+    font-weight: bold;
+    font-size: larger;
+}
+
+.block-content{
+  margin-top: 2rem;
+  .block-input{
+    width: 80%;
+    margin: auto;
+
+    
+    .list-name {
+     margin-left: 5px;
+  }
+  
+  .list-item {
+    border: 1px solid #ccc;
+    border-radius: 2rem;
+}
+  }
+}
+}
+
+ion-modal {
+  --height: auto;
+}
