--- a/web/src/app/user/add-property/add-property.page.scss
+++ b/web/src/app/user/add-property/add-property.page.scss
@@ -1,81 +1,86 @@
-#content{
-    padding: 20px 10px 20px 10px;
-  }
-  
-  .forms {
-    text-align: center;
-    height: auto;
-    justify-content: center;
-    color: black;
-    background-color: white;
-    left: 0;
-    right: 0;
-    border: 0px;
-  }
-  
-  .opemodal{
-    display: flex;
-    justify-content: center;
-    width: 50%;
-    height: 40px;
-    padding: 0px;
-    margin: 20px 0px 50px 25%;
-  }
-  
-  .header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 11vh;
-    color: black;
-  }
-  
-  .device {
-    margin-top: 50px;
-    padding: 10px 10px 5px 10px !important;
-    background-color: rgb(233, 233, 233);
-    height: auto;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-  }
-  
-  ion-input {
-    --background: transparent; /* Enlève l'arrière-plan */
-    border: none; /* Enlève la bordure */
-    box-shadow: none; /* Enlève l'ombre */
-    width: 200px;
-  
-  }
-  ion-label {
-    border: none; /* Enlève la bordure */
-  }
-  
-  .item-inner{
-    padding-right: 0px!important;
-  }
-  
-  ng-template{
-    color: black;
-  }
-  
-  .my-custom-class {
-    --min-width: 300px;
-    --min-height: 400px;
-  }
-  
-  ion-item {
-    --border-width: 0px;
-    --border-height: 0px;
-    --border: 0px;
-    --ion-item-border-width: 0px;
-  }
-  
+#content {
+  padding: 20px 10px 20px 10px;
+}
 
-  .property-list {
-    width: 80%;
-    margin: auto;
-    border: 1px solid #ccc;
-    border-radius: 3vh;
+.forms {
+  text-align: center;
+  height: auto;
+  justify-content: center;
+  color: black;
+  background-color: white;
+  left: 0;
+  right: 0;
+  border: 0px;
+}
+
+.opemodal {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  height: 40px;
+  padding: 0px;
+  margin: 20px 0px 50px 25%;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 11vh;
+  color: black;
+}
+
+.device {
+  margin-top: 50px;
+  padding: 10px 10px 5px 10px !important;
+  background-color: rgb(233, 233, 233);
+  height: auto;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+ion-input {
+  --background: transparent;
+  /* Enlève l'arrière-plan */
+  border: none;
+  /* Enlève la bordure */
+  box-shadow: none;
+  /* Enlève l'ombre */
+  width: 200px;
+
+}
+
+ion-label {
+  border: none;
+  /* Enlève la bordure */
+}
+
+.item-inner {
+  padding-right: 0px !important;
+}
+
+ng-template {
+  color: black;
+}
+
+.my-custom-class {
+  --min-width: 300px;
+  --min-height: 400px;
+}
+
+ion-item {
+  --border-width: 0px;
+  --border-height: 0px;
+  --border: 0px;
+  --ion-item-border-width: 0px;
+}
+
+
+.property-list {
+  width: 80%;
+  margin: auto;
+  border: 1px solid #ccc;
+  border-radius: 3vh;
 }
 
 
@@ -88,7 +93,8 @@
 
 .block {
   width: 100%;
-  height: 350px;
+  height: 100%;
+  overflow-y: auto;
 
   .block-title {
     display: flex;
@@ -96,27 +102,41 @@
     margin-top: 2rem;
     font-weight: bold;
     font-size: larger;
-}
+  }
 
-.block-content{
-  margin-top: 2rem;
-  .block-input{
-    width: 80%;
+  .block-content {
+    margin-top: 1rem;
+
+    .block-input {
+      width: 80%;
+      margin: auto;
+
+
+      .list-name {
+        margin-left: 5px;
+      }
+
+      .list-item {
+        border: 1px solid var(--ion-color-step-550);
+        border-radius: 2rem;
+      }
+    }
+  }
+
+  .add-btn{
+    position: relative;
+    display: flex;
+    justify-content: center;
     margin: auto;
-
-    
-    .list-name {
-     margin-left: 5px;
+    top: 1rem;
+    width: 80%;
+    .btn{
+      width: 100%;
+      color:var(--ion-color-step-50);
+    }
   }
-  
-  .list-item {
-    border: 1px solid #ccc;
-    border-radius: 2rem;
-}
-  }
-}
 }
 
 ion-modal {
-  --height: auto;
+  --height: 60%;
 }
