liaison du back et du front-end, mise en place de la logique d'ajout des property

--- a/web/src/app/auth/login/login.page.html
+++ b/web/src/app/auth/login/login.page.html
@@ -52,7 +52,7 @@
 
         <p class="Sign-up-message">
           Dont have an account yet!
-          <a href="#" class="signup-link">
+          <a routerLink="/auth/register" class="signup-link">
             <small class="">Sign up</small>
           </a>
         </p>
