--- a/web/src/app/user/home/home.page.html
+++ b/web/src/app/user/home/home.page.html
@@ -26,8 +26,76 @@
             <ion-col style="padding-top: 13px;" size="2">
               <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
             </ion-col>
-            <ion-col style="padding-top: 9px;" size="10">
-              <ion-router-link style="text-align: left;" routerLink="/home"><h3 class="m-0 h3">Home</h3></ion-router-link>
+            <ion-col style="padding-top: 9px;" size="10" >
+              <ion-router-link style="text-align: left;" routerLink="/home"><h3 class="m-0 h3">House</h3></ion-router-link>
+            </ion-col>
+          </ion-col>
+          <ion-col class="p-0 pt-1 pb-1" size="4">
+            <ion-button class="custom-button">
+              <ion-icon id="view" name="eye" aria-label="view"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <ion-grid class="p-0">
+        <ion-row class="p-0" style="display: flex; align-items: center; height: auto; justify-content: space-around;">
+          <ion-col style="display: flex; justify-content: space-between;" size="8">
+            <ion-col style="padding-top: 13px;" size="2">
+              <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
+            </ion-col>
+            <ion-col style="padding-top: 9px;" size="10" >
+              <ion-router-link style="text-align: left;" routerLink="/home"><h3 class="m-0 h3">Store</h3></ion-router-link>
+            </ion-col>
+          </ion-col>
+          <ion-col class="p-0 pt-1 pb-1" size="4">
+            <ion-button class="custom-button">
+              <ion-icon id="view" name="eye" aria-label="view"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <ion-grid class="p-0">
+        <ion-row class="p-0" style="display: flex; align-items: center; height: auto; justify-content: space-around;">
+          <ion-col style="display: flex; justify-content: space-between;" size="8">
+            <ion-col style="padding-top: 13px;" size="2">
+              <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
+            </ion-col>
+            <ion-col style="padding-top: 9px;" size="10" >
+              <ion-router-link style="text-align: left;" routerLink="/home"><h3 class="m-0 h3">Agency</h3></ion-router-link>
+            </ion-col>
+          </ion-col>
+          <ion-col class="p-0 pt-1 pb-1" size="4">
+            <ion-button class="custom-button">
+              <ion-icon id="view" name="eye" aria-label="view"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <ion-grid class="p-0">
+        <ion-row class="p-0" style="display: flex; align-items: center; height: auto; justify-content: space-around;">
+          <ion-col style="display: flex; justify-content: space-between;" size="8">
+            <ion-col style="padding-top: 13px;" size="2">
+              <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
+            </ion-col>
+            <ion-col style="padding-top: 9px;" size="10" >
+              <ion-router-link style="text-align: left;" routerLink="/home"><h3 class="m-0 h3">Company</h3></ion-router-link>
+            </ion-col>
+          </ion-col>
+          <ion-col class="p-0 pt-1 pb-1" size="4">
+            <ion-button class="custom-button">
+              <ion-icon id="view" name="eye" aria-label="view"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <!-- <ion-grid class="p-0" *ngIf="data && data?.length > 0">
+        <ion-row class="p-0" style="display: flex; align-items: center; height: auto; justify-content: space-around;" *ngFor="let propert of data">
+          <ion-col style="display: flex; justify-content: space-between;" size="8">
+            <ion-col style="padding-top: 13px;" size="2">
+              <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
+            </ion-col>
+            <ion-col style="padding-top: 9px;" size="10" >
+              <ion-router-link style="text-align: left;" routerLink="/home"><h3 class="m-0 h3">{{ propert.property }}</h3></ion-router-link>
             </ion-col>
           </ion-col>
           <ion-col class="p-0 pt-1 pb-1" style="display: flex; justify-content: space-between;" size="4">
@@ -39,7 +107,7 @@
             </ion-button>
           </ion-col>
         </ion-row>
-      </ion-grid>
+      </ion-grid> -->
     </div>
   </div>
 </ion-content>
