--- a/web/src/app/user/include/header/header.page.html
+++ b/web/src/app/user/include/header/header.page.html
@@ -7,7 +7,7 @@
         </ion-col>
         <ion-col size="8">
           <ion-title class="p-0" style="font-size: 100%;" id="title">
-            <ion-router-link routerLink="/home"><h2 style="width: 100%;" class="m-0">Power Calc</h2></ion-router-link>
+            <ion-router-link routerLink="/user/home"><h2 style="width: 100%;" class="m-0">Power Calc</h2></ion-router-link>
           </ion-title>
         </ion-col>
         <ion-col size="2">
