--- a/web/src/app/user/home/home.page.html
+++ b/web/src/app/user/home/home.page.html
@@ -1,5 +1,3 @@
-
-
 <app-header></app-header>
 
 <ion-content id="content" [fullscreen]="true">
@@ -21,93 +19,22 @@
 
       </ion-list>
       <ion-grid class="p-0">
-        <ion-row class="p-0" style="display: flex; align-items: center; height: auto; justify-content: space-around;">
+        <ion-row *ngFor="let item of type_property" class="p-0" style="display: flex; align-items: center; height: auto; justify-content: space-around;">
           <ion-col style="display: flex; justify-content: space-between;" size="8">
             <ion-col style="padding-top: 13px;" size="2">
               <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
             </ion-col>
             <ion-col style="padding-top: 9px;" size="10" >
-              <ion-router-link style="text-align: left;" routerLink="/home"><h3 class="m-0 h3">House</h3></ion-router-link>
+              <h2 style="text-align: left;"><h3 class="m-0 h3">{{item.type}}</h3></h2>
             </ion-col>
           </ion-col>
           <ion-col class="p-0 pt-1 pb-1" size="4">
-            <ion-button class="custom-button">
+            <ion-button (click)="Singleproperty(item.type)" class="custom-button">
               <ion-icon id="view" name="eye" aria-label="view"></ion-icon>
             </ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
-      <ion-grid class="p-0">
-        <ion-row class="p-0" style="display: flex; align-items: center; height: auto; justify-content: space-around;">
-          <ion-col style="display: flex; justify-content: space-between;" size="8">
-            <ion-col style="padding-top: 13px;" size="2">
-              <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
-            </ion-col>
-            <ion-col style="padding-top: 9px;" size="10" >
-              <ion-router-link style="text-align: left;" routerLink="/home"><h3 class="m-0 h3">Store</h3></ion-router-link>
-            </ion-col>
-          </ion-col>
-          <ion-col class="p-0 pt-1 pb-1" size="4">
-            <ion-button class="custom-button">
-              <ion-icon id="view" name="eye" aria-label="view"></ion-icon>
-            </ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-      <ion-grid class="p-0">
-        <ion-row class="p-0" style="display: flex; align-items: center; height: auto; justify-content: space-around;">
-          <ion-col style="display: flex; justify-content: space-between;" size="8">
-            <ion-col style="padding-top: 13px;" size="2">
-              <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
-            </ion-col>
-            <ion-col style="padding-top: 9px;" size="10" >
-              <ion-router-link style="text-align: left;" routerLink="/home"><h3 class="m-0 h3">Agency</h3></ion-router-link>
-            </ion-col>
-          </ion-col>
-          <ion-col class="p-0 pt-1 pb-1" size="4">
-            <ion-button class="custom-button">
-              <ion-icon id="view" name="eye" aria-label="view"></ion-icon>
-            </ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-      <ion-grid class="p-0">
-        <ion-row class="p-0" style="display: flex; align-items: center; height: auto; justify-content: space-around;">
-          <ion-col style="display: flex; justify-content: space-between;" size="8">
-            <ion-col style="padding-top: 13px;" size="2">
-              <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
-            </ion-col>
-            <ion-col style="padding-top: 9px;" size="10" >
-              <ion-router-link style="text-align: left;" routerLink="/home"><h3 class="m-0 h3">Company</h3></ion-router-link>
-            </ion-col>
-          </ion-col>
-          <ion-col class="p-0 pt-1 pb-1" size="4">
-            <ion-button class="custom-button">
-              <ion-icon id="view" name="eye" aria-label="view"></ion-icon>
-            </ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-      <!-- <ion-grid class="p-0" *ngIf="data && data?.length > 0">
-        <ion-row class="p-0" style="display: flex; align-items: center; height: auto; justify-content: space-around;" *ngFor="let propert of data">
-          <ion-col style="display: flex; justify-content: space-between;" size="8">
-            <ion-col style="padding-top: 13px;" size="2">
-              <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
-            </ion-col>
-            <ion-col style="padding-top: 9px;" size="10" >
-              <ion-router-link style="text-align: left;" routerLink="/home"><h3 class="m-0 h3">{{ propert.property }}</h3></ion-router-link>
-            </ion-col>
-          </ion-col>
-          <ion-col class="p-0 pt-1 pb-1" style="display: flex; justify-content: space-between;" size="4">
-            <ion-button class="custom-button">
-              <ion-icon id="trash" name="trash" aria-label="trash"></ion-icon>
-            </ion-button>
-            <ion-button class="custom-button">
-              <ion-icon id="pencil" name="pencil" aria-label="pencil"></ion-icon>
-            </ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid> -->
     </div>
   </div>
 </ion-content>
