mise en place de la generation de facture

--- a/web/src/app/user/add-property/add-property.page.html
+++ b/web/src/app/user/add-property/add-property.page.html
@@ -51,10 +51,16 @@
                   </ion-select>
                 </ion-item>
               </div>
-              <div class="block-input">
+              <div class="block-input mb-3">
                 <ion-label class="list-name">Device usage time</ion-label>
                 <ion-item class="list-item">
-                  <ion-input type="text" placeholder="Enter device usage time" formControlName="de_usage_time"></ion-input>
+                  <ion-input type="text" placeholder="Hour format" formControlName="de_usage_time"></ion-input>
+                </ion-item>
+              </div>
+              <div class="block-input">
+                <ion-label class="list-name">Average usage per month</ion-label>
+                <ion-item class="list-item">
+                  <ion-input type="text" placeholder="Day format" formControlName="de_usage_day"></ion-input>
                 </ion-item>
               </div>
             </ion-list>
