--- a/web/src/app/user/invoice/invoice.page.html
+++ b/web/src/app/user/invoice/invoice.page.html
@@ -19,7 +19,7 @@
       <ion-list lines="none">
         <ion-item>
           <ion-label>Total Device:</ion-label>
-          <ion-label slot="end">{{store?.length}}</ion-label>
+          <ion-label slot="end">{{devices_info?.length}}</ion-label>
         </ion-item>
         <ion-item *ngFor="let item of devices_info">
           <ion-label>{{item.de_name}}:</ion-label>
