--- a/web/src/app/user/home/home.page.html
+++ b/web/src/app/user/home/home.page.html
@@ -15,7 +15,7 @@
     <p>Calcule générés</p> <!-- Ajout du paragraphe -->
     <div class="property">
       <ion-router-link style="background-color: #F8A042!important; padding: 5px 8px 5px 8px; border-radius: 20px;" routerLink="/user/add-property">add a property</ion-router-link>
-      <ion-list>
+      <ion-list style="height: 30px; background-color: rgb(233, 233, 233);">
 
       </ion-list>
       <ion-grid class="p-0">
