--- a/web/src/app/user/home/home.page.scss
+++ b/web/src/app/user/home/home.page.scss
@@ -1,7 +1,7 @@
 #content {
     color: black;
   }
-  
+
   .circle-container {
     display: flex;
     justify-content: center;
@@ -9,7 +9,7 @@
     height: 30vh;
     /* Ajustez selon votre besoin */
   }
-  
+
   .circle {
     width: 200px;
     height: 200px;
@@ -26,7 +26,7 @@
     justify-content: center;
     align-items: center;
   }
-  
+
   .inner-circle {
     width: 125px;
     height: 125px;
@@ -37,48 +37,48 @@
     text-align: center;
     align-items: center;
     position: absolute;
-    top: 22%;
+    top: 23%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
-  
+
   .inner-circle-text {
     font-size: 12px; /* Adjust the font size as needed */
     color: black; /* Adjust the text color as needed */
     text-align: center;
   }
-  
+
   .h3 {
     font-size: 1.375rem;
     color: black;
   }
-  
+
   #container {
     text-align: center;
     left: 0;
     right: 0;
   }
-  
+
   #container p {
     font-size: 16px;
     line-height: 22px;
     color: black;
     margin: 0;
   }
-  
+
   .property {
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
-    height: auto;
+    height: 60vh;
     padding: 40px 10px 10px 10px;
     background-color: rgb(233, 233, 233);
     margin-top: 5px;
   }
-  
+
   ion-router-link {
     color: black;
   }
-  
+
   .list-md {
     margin-left: 0;
     margin-right: 0;
@@ -90,10 +90,9 @@
     padding-bottom: 8px;
     background-color:  transparent;
   }
-  
+
   .custom-button {
     --background: rgb(212, 212, 212);
     --color: #000000; /* Texte noir pour contraste */
     border-radius: 8px; /* Bords arrondis */
   }
-  
