--- a/web/src/app/user/include/header/header.page.html
+++ b/web/src/app/user/include/header/header.page.html
@@ -6,7 +6,7 @@
           <ion-icon id="menu" name="menu" aria-label="Menu"></ion-icon>
         </ion-col>
         <ion-col size="8">
-          <ion-title class="p-0" style="font-size: 100%;" id="title">
+          <ion-title class="p-0 m-0" style="font-size: 100%;" id="title">
             <ion-router-link routerLink="/user/home"><h2 style="width: 100%;" class="m-0">Power Calc</h2></ion-router-link>
           </ion-title>
         </ion-col>
