--- a/web/src/app/user/add-property/add-property.page.html
+++ b/web/src/app/user/add-property/add-property.page.html
@@ -54,13 +54,13 @@
               <div class="block-input mb-3">
                 <ion-label class="list-name">Device usage time</ion-label>
                 <ion-item class="list-item">
-                  <ion-input type="text" placeholder="Hour format" formControlName="de_usage_time"></ion-input>
+                  <ion-input type="text" placeholder="Hour format" formControlName="de_usage_time" inputmode="numeric" pattern="[0-9]*" (ionInput)="validateNumeric($event)"></ion-input>
                 </ion-item>
               </div>
               <div class="block-input">
                 <ion-label class="list-name">Average usage per month</ion-label>
                 <ion-item class="list-item">
-                  <ion-input type="text" placeholder="Day format" formControlName="de_usage_day"></ion-input>
+                  <ion-input type="text" placeholder="Day format" formControlName="de_usage_day" inputmode="numeric" pattern="[0-9]*" (ionInput)="validateNumeric($event)"></ion-input>
                 </ion-item>
               </div>
             </ion-list>
