--- a/web/src/app/user/view-property/view-property.page.scss
+++ b/web/src/app/user/view-property/view-property.page.scss
@@ -1,3 +1,33 @@
+.header-icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
+}
+
+.head-grid {
+  text-align: center;
+}
+
+#menu {
+  margin-top: 4px;
+  width: 28px;
+  height: 30px;
+}
+
+#title {
+  margin-top: 8px;
+}
+
+#person {
+  margin-top: 4px;
+  width: 26px;
+  height: 26px;
+}
+
+
+
+
+
 .view-PropertyHeader{
     display: flex;
     position: relative;
@@ -20,7 +50,7 @@ h5 {
     margin-top: 25px;
 
     padding: 15px 0px 8px 0px;
-    border-radius: 20px;
+    border-radius: 10px;
     font-size: 1rem;
 
     background-color: #ee7d04;
@@ -34,7 +64,7 @@ h5 {
     transition: background-color 0.3s;
 
     margin-right: 10px;
-  
+
     &:hover {
       background-color: #eecba5;
     }
@@ -64,9 +94,9 @@ h5 {
     position: relative;
     top: 11vh;
     color: #010101 !important;
-    display: flex; 
+    display: flex;
     justify-content: center;
-    
+
 }
 .amount {
     position: relative;
@@ -103,20 +133,20 @@ h5 {
         --background: #EFF3F4; /* Définir la couleur de fond pour chaque élément de la liste */
     }
 
-  
+
 }
 
 .footer_btn {
     justify-content: center;
     display: flex;
   }
-  
+
   .back_button {
     width: 145px;
     right: 20px;
     position: relative;
   }
-  
+
   .print_button {
     width: 145px;
     left: 20px;
@@ -128,7 +158,7 @@ h5 {
     justify-content: space-around;
     margin-top: 100px;
 }
-  
+
 .button-container ion-button {
     margin-bottom: 10px;
 }
